# awesome-ai-portfolio-projects

./: .gitignore  README.md  generate_readme.py
.devcontainer/: devcontainer.json
1-mcp-server-from-any-api/: README.md  mcp_server.py  pyproject.toml  requirements.txt
1-mcp-server-from-any-api/app/: __init__.py  main.py  schemas.py
1_deep_knowledge_agent/: 1_deep_knowledge_agent.py  README.md  __init__.py  pyproject.toml  streamlit_app.py
1_deep_knowledge_agent/documentation/: display-info.json
1_deep_knowledge_agent/sample_input/: SAMPLE_QUERIES_AND_EXPECTED_ANSWERS.md  sample_elon_musk_qa.md
2-airbnb-listing-finder-agent/: 2-airbnb-listing-finder-agent.py  pyproject.toml
2_airbnb_listing_finder_agent/: 2_airbnb_listing_finder_agent.py  README.md  SAMPLE_RUN.md  __init__.py  pyproject.toml  streamlit_app.py
2_airbnb_listing_finder_agent/documentation/: display-info.json
3-customer-support-agent/: README.md  app.py  requirements.txt
3-customer-support-agent/documentation/: display-info.json
4-bookey_the_book_recommender_agent/: 4-bookey_the_book_recommender_agent.py  README.md  SAMPLE_RUN.md  __init__.py  pyproject.toml  streamlit_app.py
4-bookey_the_book_recommender_agent/documentation/: display-info.json
5_competitor_analysis_agent/: 5_competitor_analysis_agent.py  README.md  SAMPLE_RUN.md  __init__.py  pyproject.toml  streamlit_app.py
5_competitor_analysis_agent/documentation/: display-info.json
6_blog_post_generator_agent/: 6_blog_post_generator_agent.py  README.md  __init__.py  pyproject.toml  streamlit_app.py
6_blog_post_generator_agent/documentation/: display-info.json
7_employee_recruiter_agent/: README.md  SAMPLE_RUN.md  streamlit_app.py
7_employee_recruiter_agent/documentation/: display-info.json
7_employee_recruiter_agent/sample_input/: README.md
8_startup_idea_validator/: .gitignore  8_startup_idea_validator.py  README.md  SAMPLE_RUN.md  __init__.py  pyproject.toml  streamlit_app.py
8_startup_idea_validator/documentation/: display-info.json
common/: __init__.py  display-info-schema.json  openrouter_utils.py  streamlit_app_template.py
