[project]
name = "deep-knowledge-agent"
version = "0.1.0"
description = "A deep knowledge agent that performs iterative searches through its knowledge base."
requires-python = ">=3.9"
dependencies = [
    "agno",
    "openai",
    "lancedb",
    "tantivy",
    "streamlit",
    "python-dotenv",
    "sqlalchemy>=2.0.44",
    "google-genai>=0.5.4",
    "pypdf>=4.2.0",
]

[tool.uv]
dev-dependencies = []
