[project]
name = "4-bookey_the_book_recommender_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.8",
    "mcp>=1.18.0",
    "openai>=2.5.0",
    "openrouter>=0.1.0",
    "dotenv>=0.1.0",
    "python-dotenv>=0.1.0",
    "exa-py==1.0.5",
    "streamlit>=1.28.0",
]
